# lylproject

./: .gitignore  LICENSE  README.md  build.gradle  config.gradle  gradle.properties  laiyuling.jks  settings.gradle
AppMonitor/: build.gradle
AppMonitor/src/main/: AndroidManifest.xml
app/: build.gradle
app/huawei/debug/: output.json
app/huawei/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  facedetector.cpp  facedetector.h  native-lib.cpp
app/tencent/debug/: output.json
app/tencent/release/: output.json
baselibrary/: build.gradle
baselibrary/src/main/: AndroidManifest.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
cv410/: build.gradle
db/: build.gradle
db/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
hotfix/src/main/: AndroidManifest.xml
httpapp/: build.gradle  info.md
httpapp/src/main/: AndroidManifest.xml
httpapp/src/main/MyAndroidManifest/: AndroidManifest.xml
lylrecycleview/: build.gradle
lylrecycleview/src/main/: AndroidManifest.xml
mvvm/: build.gradle
mvvm/src/main/: AndroidManifest.xml
secondtheory/src/main/: AndroidManifest.xml
skin/: info.md
skin/app/: build.gradle
skin/app/src/main/: AndroidManifest.xml
skin/gradle/wrapper/: gradle-wrapper.properties
testapp/: build.gradle
testapp/src/main/: AndroidManifest.xml
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
view/: build.gradle
view/src/main/: AndroidManifest.xml
wanandroid/: build.gradle
wanandroid/src/main/: AndroidManifest.xml
(+976 files in other folders)
